# agent-toast

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  cliff.toml  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/commands/: release.md
.github/workflows/: check.yml  release.yml
crates/agent-toast-core/: Cargo.toml
crates/agent-toast-core/src/: dynamic.rs  hook_config.rs  lib.rs  wire.rs
crates/agent-toast-desktop/: Cargo.toml  tauri.conf.json
crates/agent-toast-desktop/capabilities/: default.json
crates/agent-toast-desktop/src/: changelog.rs  cli.rs  fonts.rs  global_sync.rs  http_server.rs  lib.rs  main.rs  notification.rs  pipe.rs  setup.rs  sound.rs  stats.rs  updater.rs  win32.rs
crates/agent-toast-send/: Cargo.toml
crates/agent-toast-send/src/: main.rs
crates/agent-toast-send/tests/: init_integration.rs  send_integration.rs
src/: App.vue  Setup.vue  global.css  i18n.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs  notification.rs  pipe.rs  setup.rs  updater.rs  win32.rs
src/components/: AboutSettings.vue  CodeBlock.vue  DesignSettings.vue  GeneralSettings.vue  HookSettings.vue  HowtoSettings.vue  RemoteSettings.vue  RemoteSnippetDialog.vue  SlidingTabs.vue  StatsSettings.vue  ToastCard.vue
src/components/ui/button/: index.ts
src/components/ui/checkbox/: Checkbox.vue
src/locales/: en.json  ko.json
video/: CLAUDE.md  package.json  pnpm-lock.yaml  remotion.config.ts  tsconfig.json
video/src/: IntroVideo.tsx  OgImage.tsx  Root.tsx  fonts.ts  locale.ts  tailwind.css  timing.ts
video/src/components/: FakeCursor.tsx  FakeNoteApp.tsx  FakeTerminal.tsx  FakeToast.tsx  Reveal.tsx  Stage.tsx
video/src/scenes/: Scene1Terminal.tsx  Scene2Notes.tsx  Scene3Notification.tsx  Scene4Return.tsx
workers/global-stats/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  wrangler.toml
workers/global-stats/migrations/: 0001_devices.sql
workers/global-stats/src/: aggregate.ts  index.ts  types.ts  validate.ts
workers/global-stats/test/: aggregate.test.ts  validate.test.ts
