[package]
name = "agent-toast"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Smart notification for AI coding agents"

[lib]
name = "agent_toast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
agent-toast-core = { path = "../agent-toast-core" }
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
dirs = "5"
open = "5"
toml = "0.9"
log.workspace = true
simplelog = "0.12"
tiny_http = "0.12"
once_cell = "1"

[dev-dependencies]
ureq = { version = "2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Media_Audio",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_Globalization",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
